_patterns/cards/cards.css
.banner {
  background-color: var(--color-primary-medium);
  height: 20em;
}

.card:hover {
  transition: all .2s linear;
  filter: brightness(1.25);
}

.hide {
  visibility: hidden;
}

.product-card:hover .hide {
  visibility: visible;
}

.icon-display {
  width:90%;
}
.h-100 {
  height: 100%;
}

.banner-content {
  max-width: 75%;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%)
}

.card-content{
  display: flex;
  flex-direction: row;
  justify-content: center;
}

